[package]
name = "handlebox"
version = "0.2.0"
authors = ["Jason Grlicky <jason@paracosm.us>"]
description = "A map-like collection that reuses unused keys. Hard-coded to use u32 keys right now."
keywords = ["container", "map", "data-structure"]
categories = ["data-structures"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
